--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/l.png" />
+    <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CI Associates — Construction Excellence</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
+    <link rel="preload" as="image" href="/src/assets/project1.jpeg">
+    <link rel="preload" as="image" href="/src/assets/project2.jpeg">
+    <link rel="preload" as="image" href="/src/assets/project3.jpeg">
   </head>
   <body>
     <div id="root"></div>
