--- a/index.html
+++ b/index.html
@@ -123,6 +123,13 @@
         "https://www.linkedin.com/company/ci-associates",
         "https://www.facebook.com/ciassociates"
       ],
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4.8",
+        "reviewCount": "150",
+        "bestRating": "5",
+        "worstRating": "1"
+      },
       "hasOfferCatalog": {
         "@type": "OfferCatalog",
         "name": "Construction Services",
