--- a/public/googled1234567890.html
+++ b/public/googled1234567890.html
@@ -1,1 +1,1 @@
-google-site-verification: googled1234567890.html
+google-site-verification: google-site-verification=2dDsgAV5QOsyqRTR68CYfThJ6MxDGGisOiFGtV3ZgSs
